register page tamamlandı, login page büyük oranda tamamlandı

--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.0.2",
+    "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.12.2",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.65.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^5.3.4",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1"
   },
