--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
